--- a/000-NetCoreBaseSample/S01-MultiEnviromentConfig/appsettings.json
+++ b/000-NetCoreBaseSample/S01-MultiEnviromentConfig/appsettings.json
@@ -7,5 +7,6 @@
   "ConnectionStrings": {
     "RicoDbContext": "Server=production;User Id=sa;Password=123456;Database=db"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppId": "ricolee_enviroment"
 }
