--- a/006-Vs2019-ConfigurationTransform/Rico.Vs2019ConfigurationTranffrom/Rico.WebApiDemo/Properties/launchSettings.json
+++ b/006-Vs2019-ConfigurationTransform/Rico.Vs2019ConfigurationTranffrom/Rico.WebApiDemo/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:50544",
+      "applicationUrl": "http://localhost:21101",
       "sslPort": 0
     }
   },
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "S03_AspNetCoreWebConfig": {
+    "Rico.WebApiDemo": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
