.net core 框架揭秘案例

--- a/000-NetCoreBaseSample/S02-ReadAppsettingConfig/appsettings.json
+++ b/000-NetCoreBaseSample/S02-ReadAppsettingConfig/appsettings.json
@@ -11,5 +11,12 @@
   "RoleNames": [
     { "Name": "Admin" },
     { "Name": "Editor" }
-  ]
+  ],
+  "CORS": {
+    "Allow": [
+      "http://localhost:8080",
+      "https://afzz.cn"
+    ]
+
+  }
 }
